Language Update Updated module to use Japanese language files Updated localization for Submit button on Roller

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,4 +1,5 @@
 {
+  "fvtt-bcdice.rollButton": "Roll",
   "fvtt-bcdice.chooseSystem": "Choose a system",
   "fvtt-bcdice.enterFormula": "Enter formula",
   "fvtt-bcdice.invalidFormula": "Invalid formula. Please try again.",
