--- a/languages/ja.json
+++ b/languages/ja.json
@@ -4,10 +4,10 @@
   "fvtt-bcdice.enterFormula": "コマンド",
   "fvtt-bcdice.invalidFormula": "一致するコマンドが見つかりませんでした。",
   "fvtt-bcdice.alias": "DiceBot",
-  "fvtt-bcdice.persistanceSettingName": "Roller Persistance",
-  "fvtt-bcdice.persistanceSettingHint": "Should the roller stay open after submitting a roll?",
-  "fvtt-bcdice.serverSettingName": "BCDice API Server",
-  "fvtt-bcdice.serverSettingHint": "Server Status List: https://api-status.bcdice.org/",
-  "fvtt-bcdice.systemSettingName": "Game System",
-  "fvtt-bcdice.systemSettingHint": "Set the default system to be used"
+  "fvtt-bcdice.persistanceSettingName": "ロール画面",
+  "fvtt-bcdice.persistanceSettingHint": "ロール後にロール画面をそのまま残しますか？",
+  "fvtt-bcdice.serverSettingName": "BCDice APIサーバ選択",
+  "fvtt-bcdice.serverSettingHint": "APIサーバはこちらからご確認ください: https://api-status.bcdice.org/",
+  "fvtt-bcdice.systemSettingName": "デフォルトシステム",
+  "fvtt-bcdice.systemSettingHint": "入室時に自動的に選択されるシステムを設定します。"
 }
