Add BrotherSharp's Japanese translations.

--- a/languages/ja.json
+++ b/languages/ja.json
@@ -1,13 +1,35 @@
 {
   "fvtt-bcdice.rollButton": "ロール",
+  "fvtt-bcdice.bcdiceImporter": "BCDice読み込み",
+  "fvtt-bcdice.bcdiceReplacements": "変数変換",
   "fvtt-bcdice.chooseSystem": "ダイスボットシステム",
+  "fvtt-bcdice.deleteThisTab": "このタブを消去しますか？",
+  "fvtt-bcdice.edit": "編集",
   "fvtt-bcdice.enterFormula": "コマンド",
+  "fvtt-bcdice.headerMarker": "ヘッダーマーカ",
+  "fvtt-bcdice.headerTrim": "ヘッダー短縮",
+  "fvtt-bcdice.import": "読み込み",
   "fvtt-bcdice.invalidFormula": "一致するコマンドが見つかりませんでした。",
-  "fvtt-bcdice.alias": "DiceBot",
+  "fvtt-bcdice.alias": "ダイスボット",
+  "fvtt-bcdice.labelThanMacro": "ラベル優先",
+  "fvtt-bcdice.macroLabelOrder": "マクロ・ラベル順序",
+  "fvtt-bcdice.macroSplitter": "マクロ分割",
+  "fvtt-bcdice.macroThanLabel": "マクロ優先",
   "fvtt-bcdice.persistanceSettingName": "ロール画面",
   "fvtt-bcdice.persistanceSettingHint": "ロール後にロール画面をそのまま残しますか？",
   "fvtt-bcdice.serverSettingName": "BCDice APIサーバ選択",
+  "fvtt-bcdice.replacements": "置き換え",
+  "fvtt-bcdice.replacementsHeader": "テキストを置き換えます",
+  "fvtt-bcdice.replacementsTextHint": "各列にFormat is 「変数名=値」というふうに記述すると、チャットパレットで使用するときは{変数名}として使用できます。",
   "fvtt-bcdice.serverSettingHint": "APIサーバはこちらからご確認ください: https://api-status.bcdice.org/",
+  "fvtt-bcdice.tabName": "タブ名",
   "fvtt-bcdice.systemSettingName": "デフォルトシステム",
-  "fvtt-bcdice.systemSettingHint": "入室時に自動的に選択されるシステムを設定します。"
+  "fvtt-bcdice.systemSettingHint": "入室時に自動的に選択されるシステムを設定します。",
+  "fvtt-bcdice.deleteTabBody": "このタブを消去しますか？中のチャットパレットとヘッダが全て消えます。",
+  "fvtt-bcdice.newTab": "新規タブ",
+  "fvtt-bcdice.newHeader": "新規ヘッダ",
+  "fvtt-bcdice.deleteHeader": "ヘッダ消去",
+  "fvtt-bcdice.deleteThisHeader": "ヘッダを消去しますか？",
+  "fvtt-bcdice.deleteHeaderBody": "このヘッダを消去しますか？中のチャットパレットが全て消えます。",
+  "fvtt-bcdice.newMacro": "新規マクロ"
 }
