--- a/languages/ja.json
+++ b/languages/ja.json
@@ -1,26 +1,26 @@
 {
   "fvtt-bcdice.rollButton": "ロール",
-  "fvtt-bcdice.bcdiceImporter": "BCDice読み込み",
+  "fvtt-bcdice.bcdiceImporter": "チャットパレット読み込み",
   "fvtt-bcdice.bcdiceReplacements": "変数変換",
   "fvtt-bcdice.chooseSystem": "ダイスボットシステム",
-  "fvtt-bcdice.deleteThisTab": "このタブを消去しますか？",
+  "fvtt-bcdice.deleteThisTab": "タブ消去",
   "fvtt-bcdice.edit": "編集",
   "fvtt-bcdice.enterFormula": "コマンド",
-  "fvtt-bcdice.headerMarker": "ヘッダーマーカ",
-  "fvtt-bcdice.headerTrim": "ヘッダー短縮",
-  "fvtt-bcdice.import": "読み込み",
+  "fvtt-bcdice.headerMarker": "ヘッダ区切り記号",
+  "fvtt-bcdice.headerTrim": "ヘッダ短縮記号",
+  "fvtt-bcdice.import": "チャットパレット",
   "fvtt-bcdice.invalidFormula": "一致するコマンドが見つかりませんでした。",
   "fvtt-bcdice.alias": "ダイスボット",
   "fvtt-bcdice.labelThanMacro": "ラベル優先",
   "fvtt-bcdice.macroLabelOrder": "マクロ・ラベル順序",
-  "fvtt-bcdice.macroSplitter": "マクロ分割",
+  "fvtt-bcdice.macroSplitter": "ロール区切り記号",
   "fvtt-bcdice.macroThanLabel": "マクロ優先",
   "fvtt-bcdice.persistanceSettingName": "ロール画面",
   "fvtt-bcdice.persistanceSettingHint": "ロール後にロール画面をそのまま残しますか？",
   "fvtt-bcdice.serverSettingName": "BCDice APIサーバ選択",
-  "fvtt-bcdice.replacements": "置き換え",
-  "fvtt-bcdice.replacementsHeader": "テキストを置き換えます",
-  "fvtt-bcdice.replacementsTextHint": "各列にFormat is 「変数名=値」というふうに記述すると、チャットパレットで使用するときは{変数名}として使用できます。",
+  "fvtt-bcdice.replacements": "変数",
+  "fvtt-bcdice.replacementsHeader": "変数を設定します（チャパレサイトで//で始まるもの）",
+  "fvtt-bcdice.replacementsTextHint": "各列に「変数名=値」というふうに記述すると、チャットパレットで使用するときは{変数名}として使用できます。変数の中に別の変数を使用することもできます。",
   "fvtt-bcdice.serverSettingHint": "APIサーバはこちらからご確認ください: https://api-status.bcdice.org/",
   "fvtt-bcdice.tabName": "タブ名",
   "fvtt-bcdice.systemSettingName": "デフォルトシステム",
@@ -31,5 +31,8 @@
   "fvtt-bcdice.deleteHeader": "ヘッダ消去",
   "fvtt-bcdice.deleteThisHeader": "ヘッダを消去しますか？",
   "fvtt-bcdice.deleteHeaderBody": "このヘッダを消去しますか？中のチャットパレットが全て消えます。",
-  "fvtt-bcdice.newMacro": "新規マクロ"
+  "fvtt-bcdice.newMacro": "新規マクロ",
+  "fvtt-bcdice.defaultHeader": "デフォルトヘッダ",
+  "fvtt-bcdice.addHeader": "ヘッダ追加",
+  "fvtt-bcdice.addMacro": "マクロ追加"
 }
