Added JA translations

--- a/languages/ja.json
+++ b/languages/ja.json
@@ -35,8 +35,8 @@
   "fvtt-bcdice.defaultHeader": "デフォルトヘッダ",
   "fvtt-bcdice.addHeader": "ヘッダ追加",
   "fvtt-bcdice.addMacro": "マクロ追加",
-  "fvtt-bcdice.keybindName": "Open BC Dice Roller",
-  "fvtt-bcdice.keybindHint": "This is a hint for the keybinding",
-  "fvtt-bcdice.formulaPersistanceSettingName": "Formula Persistance",
-  "fvtt-bcdice.formulaPersistanceSettingHint": "Should the formula in the text input stay after pressing Enter / Roll?"
+  "fvtt-bcdice.keybindName": "BCダイス・チャットパレットを開く",
+  "fvtt-bcdice.keybindHint": "BCダイスを使うためのメニューとチャットパレットを登録するための画面を開きます。",
+  "fvtt-bcdice.formulaPersistanceSettingName": "ロール式維持",
+  "fvtt-bcdice.formulaPersistanceSettingHint": "ロール後に入力欄に前のコマンドを残しますか？"
 }
